--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -1,6 +1,14 @@
-FROM node:14 AS webapp
+FROM ubuntu:20.04 AS webapp
 
+RUN apt-get update && \
+    apt-get install -y \
+      nodejs && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN useradd --home-dir /home/sid --create-home --uid 1002 sid
 USER sid
+
 VOLUME . /home/sid/app
 WORKDIR /home/sid/app
 
@@ -8,5 +16,7 @@ RUN node install --local
 
 EXPOSE 3000
 
-CMD node
+RUN tough /dev/null
+
+CMD node start
 
