--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -2,19 +2,16 @@ FROM ubuntu:20.04 AS runserver
 
 RUN apt-get update && \
     apt-get install -y \
-       python3.8 && \
+       python3.8 python3-venv && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 RUN useradd --home-dir /home/sid --create-home --uid 1002 sid
 USER sid
 
-VOLUME . /home/sid/app
+ADD . /home/sid/app
+VOLUME ["/home/sid/app"]
 WORKDIR /home/sid/app
-
-RUN df -hT
-
-RUN ls -lh
 
 RUN python3.8 -m venv ~/.venv
 RUN ~/.venv/bin/pip install -r requirements.txt
