--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,12 +1,10 @@
-FROM ubuntu:20.04 AS runserver
+FROM python:3.8-alpine AS runserver
 
-RUN apt-get update && \
-    apt-get install -y \
-       python3.8 python3-venv libpq-dev python3-dev build-essential && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+RUN apk update && \
+    apk add postgresql-dev gcc python3-dev musl-dev
 
-RUN useradd --home-dir /home/sid --create-home --uid 1002 sid
+#RUN useradd --home-dir /home/sid --create-home --uid 1002 sid
+RUN adduser -h /home/sid -u 1002 -D sid
 USER sid
 
 ADD . /home/sid/app
@@ -14,11 +12,10 @@ VOLUME ["/home/sid/app"]
 WORKDIR /home/sid/app
 
 RUN python3.8 -m venv ~/.venv
-RUN ~/.venv/bin/pip install wheel
+RUN ~/.venv/bin/pip install --upgrade pip wheel
 RUN ~/.venv/bin/pip install -r requirements.txt
 
-EXPOSE 8000
+EXPOSE 8000/tcp
 
-CMD . ~/.venv/bin/activate && \
-  python manage.py runserver 0.0.0.0:8000
+CMD ~/.venv/bin/python manage.py runserver 0.0.0.0:8000
 
