--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -5,12 +5,12 @@ RUN adduser -h /home/sid -u 1002 -D sid
 USER sid
 
 ADD . /home/sid/app
-VOLUME ["/home/sid/app"]
+VOLUME --chown=1002 /home/sid/app
+VOLUME /home/sid/app/node_modules
 WORKDIR /home/sid/app
-
-RUN npm install --local
 
 EXPOSE 3000/tcp
 
-CMD npm start
+CMD npm install && \
+    npm start
 
