--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '8000:8000'
     volumes:
-      - ./django:/home/sid/app
+      - ./django:/home/sid/app:z
     links:
       - postgresql
     environment:
@@ -17,6 +17,10 @@ services:
       - LC_LANG=en_UK.UTF-8
       - PYTHONUNBUFFERED=1
       - DJANGO_SETTINGS_MODULE=local_settings
+      - POSTGRES_HOST=postgresql
+      - POSTGRES_PASSWORD=django
+      - POSTGRES_USER=django
+      - POSTGRES_DB=django
       - GIT_AUTHOR_EMAIL
       - GIT_AUTHOR_NAME
       - GIT_COMMITTER_EMAIL
@@ -25,25 +29,6 @@ services:
       - network
     depends_on:
       - postgresql
-    stdin_open: true
-    tty: true
-
-  webapp:
-    image: webapp
-    build: react
-    ports:
-      - '3000:3000'
-    volumes:
-      - ./react:/home/sid/app
-    environment:
-      - HTTPS=off
-      - LANG=en_UK.utf8
-      - LC_ALL=en_UK.UTF-8
-      - LC_LANG=en_UK.UTF-8
-    networks:
-      - network
-    depends_on:
-      - runserver
     stdin_open: true
     tty: true
 
@@ -62,6 +47,7 @@ services:
 
 volumes:
   postgresql:
+  node_modules:
 
 networks:
   network:
