--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
       - LC_ALL=en_UK.UTF-8
       - LC_LANG=en_UK.UTF-8
       - NODE_PATH=/home/sid
+    command: install
+#    command: start
     networks:
       - network
     depends_on:
