--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:14-alpine AS webapp
 
 RUN apk update && \
-    apk add bash zsh yarn
+    apk add sudo bash zsh \
+        yarn
 
 ADD . /home/node/app
 VOLUME /home/node/app
@@ -10,4 +11,4 @@ USER node
 
 WORKDIR /home/node/app
 
-CMD /home/node/app/run_react.sh
+CMD npm start
