--- a/react/package.json
+++ b/react/package.json
@@ -2,7 +2,9 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "_dependencies": { "joi": "^13.4.0" },
+  "_dependencies": {
+    "joi": "^13.4.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
