--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -4,20 +4,19 @@ RUN apk update && \
     apk add sudo bash zsh \
         gcc postgresql-dev python3-dev musl-dev jpeg-dev zlib-dev
 
-RUN adduser -h /home/sid -D sid
-RUN mkdir /home/sid/upload /home/sid/cache /home/sid/brython && \
-    chown sid:sid /home/sid/upload /home/sid/cache /home/sid/brython && \
-    chmod 755 /home/sid/upload /home/sid/cache /home/sid/brython
+RUN adduser -h /home/sid -D sid \
+    && mkdir /home/sid/mediaroot /home/sid/cache /home/sid/brython \
+    && chmod 755 /home/sid/mediaroot /home/sid/cache /home/sid/brython \
+    && chown -R sid:sid /home/sid
 
 USER sid
+WORKDIR /home/sid/app
 
 ADD . /home/sid/app
-VOLUME ["/home/sid/app"]
 
-WORKDIR /home/sid/app
-RUN python3 -m venv ~/venv
-RUN ~/venv/bin/pip install --upgrade pip wheel brython
-RUN ~/venv/bin/pip install -r requirements.txt
+RUN python3 -m venv ~/venv \
+    && ~/venv/bin/pip install --upgrade pip wheel brython \
+    && ~/venv/bin/pip install -r requirements.txt
 
 WORKDIR /home/sid/brython
 RUN ~/venv/bin/brython-cli --install
