Move Django dockerfile out os source directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ version: '3'
 services:
   runserver:
     image: runserver
-    build: django
+    build:
+      context: .
+      dockerfile: Dockerfile.django
     ports:
       - '8000:8000'
     volumes:
