--- a/Dockerfile.django
+++ b/Dockerfile.django
@@ -12,7 +12,8 @@ RUN adduser -h /home/sid -D sid \
 USER sid
 WORKDIR /home/sid/app
 
-ADD . /home/sid/app
+ADD django /home/sid/app
+COPY scripts/init_django.sh /home/sid/init_django.sh
 
 RUN python3 -m venv ~/venv \
     && ~/venv/bin/pip install --upgrade pip wheel brython \
