--- a/django/requirements_prod.txt
+++ b/django/requirements_prod.txt
@@ -10,5 +10,7 @@ psycopg2==2.9.10
     # via -r requirements_prod.in
 pyjwt==2.10.1
     # via -r requirements_prod.in
+pymemcache==4.0.0
+    # via -r requirements_prod.in
 sqlparse==0.5.3
     # via django
